implement new lens offsets and disable old variables

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1695,7 +1695,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.CARDINAL_DIRS__OFFSET_X(class='form-control bg-secondary') }}
             <div id="CARDINAL_DIRS__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">X Offset from center</div>
+        <div class="col-sm-8">Not Used - Use Lens offsets on Location Tab</div>
     </div>
 
     <div class="form-group row">
@@ -1706,7 +1706,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.CARDINAL_DIRS__OFFSET_Y(class='form-control bg-secondary') }}
             <div id="CARDINAL_DIRS__OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Y Offset from center</div>
+        <div class="col-sm-8"></div>
     </div>
 
     <div class="form-group row">
@@ -2141,7 +2141,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_CIRCLE_MASK__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>X Offset from center</div>
+            <div>Not Used - Use Lens offsets on Location Tab</div>
         </div>
     </div>
 
@@ -2154,7 +2154,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_CIRCLE_MASK__OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Y Offset from center</div>
+            <div></div>
         </div>
     </div>
 
@@ -2583,7 +2583,7 @@ var camera_id = {{ camera_id }};
             <div id="FISH2PANO__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>X Offset from center</div>
+            <div>Not Used - Use Lens offsets on Location Tab</div>
         </div>
     </div>
 
@@ -2596,7 +2596,7 @@ var camera_id = {{ camera_id }};
             <div id="FISH2PANO__OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Y Offset from center</div>
+            <div></div>
         </div>
     </div>
 
@@ -2874,7 +2874,7 @@ var camera_id = {{ camera_id }};
             <div id="LENS_OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Lens/Sensor offset</div>
+            <div>Lens/Sensor offset from center</div>
         </div>
     </div>
 
