--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -553,32 +553,6 @@ var fullscreen = false;  //initial state
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_image_processing.FISH2PANO__OFFSET_X.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_image_processing.FISH2PANO__OFFSET_X(class='form-control bg-secondary') }}
-            <div id="FISH2PANO__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-8">
-            <div>X Offset from center</div>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_image_processing.FISH2PANO__OFFSET_Y.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_image_processing.FISH2PANO__OFFSET_Y(class='form-control bg-secondary') }}
-            <div id="FISH2PANO__OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-8">
-            <div>Y Offset from center</div>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
             {{ form_image_processing.FISH2PANO__ROTATE_ANGLE.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -620,6 +594,32 @@ var fullscreen = false;  //initial state
 
     <div>
       <h5>These options are applied to the unprocessed image automatically</h5>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.LENS_OFFSET_X.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.LENS_OFFSET_X(class='form-control bg-secondary') }}
+            <div id="LENS_OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>X Offset from center</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.LENS_OFFSET_Y.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.LENS_OFFSET_Y(class='form-control bg-secondary') }}
+            <div id="LENS_OFFSET_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Y Offset from center</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -768,6 +768,8 @@ const field_names = [
     'CAMERA_ID',
     'FRAME_TYPE',
     'FITS_ID',
+    'LENS_OFFSET_X',
+    'LENS_OFFSET_Y',
     'CCD_BIT_DEPTH',
     'CLAHE_CLIPLIMIT',
     'CLAHE_GRIDSIZE',
@@ -797,8 +799,6 @@ const field_names = [
     'IMAGE_ALIGN_POINTS',
     'IMAGE_ALIGN_SOURCEMINAREA',
     'FISH2PANO__DIAMETER',
-    'FISH2PANO__OFFSET_X',
-    'FISH2PANO__OFFSET_Y',
     'FISH2PANO__ROTATE_ANGLE',
     'FISH2PANO__SCALE',
 ];
