--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2047,7 +2047,8 @@ var camera_id = {{ camera_id }};
             <div id="TIMELAPSE__IMAGE_CIRCLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Size of image circle for wrapping the keogram</div>
+            <div>Offsets for the image circle are on the Location tab</div>
         </div>
     </div>
 
@@ -2060,7 +2061,7 @@ var camera_id = {{ camera_id }};
             <div id="TIMELAPSE__KEOGRAM_RATIO-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>The ratio of the size of the keogram as it relates to the image circle</div>
         </div>
     </div>
 
