--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1958,7 +1958,7 @@ var camera_id = {{ camera_id }};
             <div id="TIMELAPSE__PRE_PROCESSOR-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
-            <div></div>
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Timelapses" class="text-decoration-none link-info" target="_blank">Timelapse Wiki</a></div>
         </div>
     </div>
 
