rotate moon for proper alignment

--- a/indi_allsky/flask/templates/astropanel.html
+++ b/indi_allsky/flask/templates/astropanel.html
@@ -366,7 +366,7 @@ $( document ).ready(function() {
     </div>
     <div class="tab-pane fade" id="nav-moon" role="tabpanel" aria-labelledby="nav-moon-tab">
         <div id="moon">
-            <img src="{{ url_for('indi_allsky.static', filename='astropanel/img/moon.png') }}" alt="Moon">
+            <img src="{{ url_for('indi_allsky.static', filename='astropanel/img/moon_rot.png') }}" alt="Moon">
             <h2>Moon</h2>
             <p><span id="moon_phase">&nbsp;</span></p>
             <table id="moon-table">
