update config text

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1499,7 +1499,7 @@ var camera_id = {{ camera_id }};
             <div id="MOON_OVERLAY__X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Negative is offset from the right side of image (Not validated with image size)</div>
         </div>
     </div>
 
@@ -1512,7 +1512,7 @@ var camera_id = {{ camera_id }};
             <div id="MOON_OVERLAY__Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Negative is offset from the bottom of image</div>
         </div>
     </div>
 
@@ -1525,7 +1525,7 @@ var camera_id = {{ camera_id }};
             <div id="MOON_OVERLAY__SCALE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Original Moon image is 400x400</div>
         </div>
     </div>
 
