new sensor for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -98,6 +98,11 @@ var sd = {
         'h' : 976,
         'p' : 3.75,
     },
+    'imx225' : {
+        'w' : 1304,
+        'h' : 976,
+        'p' : 3.75,
+    },
     'imx185' : {
         'w' : 1944,
         'h' : 1224,
