--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1529,6 +1529,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.MOON_OVERLAY__DARK_SIDE_SCALE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.MOON_OVERLAY__DARK_SIDE_SCALE(class='form-control bg-secondary') }}
+            <div id="MOON_OVERLAY__DARK_SIDE_SCALE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default: 0.4 - 0.0 would make the shaded area completely black</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -6083,6 +6096,7 @@ const field_names = [
     'MOON_OVERLAY__X',
     'MOON_OVERLAY__Y',
     'MOON_OVERLAY__SCALE',
+    'MOON_OVERLAY__DARK_SIDE_SCALE',
     'FISH2PANO__DIAMETER',
     'FISH2PANO__OFFSET_X',
     'FISH2PANO__OFFSET_Y',
